--- a/Source/SizeOnDiskSetup/Product.wxs
+++ b/Source/SizeOnDiskSetup/Product.wxs
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi"
-     xmlns:bal="http://schemas.microsoft.com/wix/BalExtension"
      xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension">
   <?define NetFx480MinRelease = 528040 ?>
   <?define NetFx452MinRelease = 379893 ?>
@@ -9,7 +8,7 @@
            Language="!(loc.LANG)"
            Codepage="unicode"
            Version="!(bind.FileVersion.ApplicationFile)"
-           Manufacturer="Galadhon"
+           Manufacturer="Sebastien Gariepy"
            UpgradeCode="9d3f227e-e788-4982-a15a-056152359ef6">
     <Package Description="SizeOnDisk !(bind.FileVersion.ApplicationFile)"
              InstallerVersion="200"
@@ -18,8 +17,15 @@
     <Media Id="1"
            Cabinet="SizeOnDiskInstaller.cab"
            EmbedCab="yes" />
-    <MajorUpgrade Schedule="afterInstallInitialize"
-                  DowngradeErrorMessage="!(loc.HigherVersionDetectedError)" />
+    <Upgrade Id="f5314c0d-47cd-43f7-97bc-80c62d07f0dd">
+      <UpgradeVersion OnlyDetect="no"
+                      Property="PREVIOUSFOUND"
+                      Minimum="0.0.0"
+                      IncludeMinimum="yes"
+                      Maximum="!(bind.FileVersion.ApplicationFile)"
+                      IncludeMaximum="no" />
+    </Upgrade>
+    <MajorUpgrade DowngradeErrorMessage="!(loc.HigherVersionDetectedError)" />
     <Directory Id="TARGETDIR"
                Name="SourceDir">
       <Directory Id="ProgramFilesFolder">
@@ -222,7 +228,7 @@
                   Target="[INSTALLDIR]SizeOnDisk.exe"
                   IconIndex="0" />
         <RegistryValue Root="HKCU"
-                       Key="Software\SOD"
+                       Key="Software\SizeOnDisk"
                        Name="SizeOnDiskShortcutInstalled"
                        Type="integer"
                        Value="1"
@@ -299,7 +305,7 @@
               Value="INSTALLDIR" />
     <Property Id="ARPHELPLINK"
               Value="https://github.com/BeePerNet/SizeOnDisk" />
-    <Property Id="ALLUSERS">1</Property>
+    <Property Id="ALLUSERS">2</Property>
     <WixVariable Id="WixUILicenseRtf"
                  Value="License.rtf" />
     <WixVariable Id="WixUIBannerBmp"
