--- a/Source/SizeOnDisk/MainWindow.xaml
+++ b/Source/SizeOnDisk/MainWindow.xaml
@@ -67,6 +67,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+        <ToolBarTray>
             <ToolBar>
                 <Button cmd:CommandBehavior.Command="{x:Static vm:VMRootHierarchy.OpenFolderCommand}" Margin="2" />
                 <Button cmd:CommandBehavior.Command="{x:Static vm:VMRootHierarchy.RefreshCommand}" Margin="2" />
@@ -123,6 +124,7 @@
                     </Button.Content>
                 </Button>
             </ToolBar>
+        </ToolBarTray>
         <TextBox Grid.Row="1" Text="{Binding SelectedListItem.Path,Mode=OneWay}" IsReadOnlyCaretVisible="True" IsReadOnly="True" />
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
