--- a/Source/SizeOnDisk/Utilities/ExceptionBox.xaml
+++ b/Source/SizeOnDisk/Utilities/ExceptionBox.xaml
@@ -1,13 +1,17 @@
 ﻿<Window x:Class="SizeOnDisk.Utilities.ExceptionBox"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="An error occured" Height="350" Width="500" ResizeMode="CanResizeWithGrip" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" Icon="/SizeOnDisk;component/Icons/eventlogError.ico">
+        MinWidth="350"
+        MinHeight="200"
+        Title="An error occured" Height="400" Width="600" ResizeMode="CanResizeWithGrip" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" Icon="/SizeOnDisk;component/Icons/eventlogError.ico">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <TextBox IsReadOnly="True" Text="{Binding Mode=OneWay}" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" />
-        <Button Grid.Row="1" Content="OK" Padding="20,1" HorizontalAlignment="Right" Margin="8,8,20,8" IsDefault="True" IsCancel="True" />
+        <TextBlock Text="{Binding Textblock}" Margin="8" TextWrapping="Wrap" TextTrimming="WordEllipsis" MaxHeight="150" />
+        <TextBox Grid.Row="1" Margin="4" Padding="2" IsReadOnly="True" Text="{Binding Textbox, Mode=OneWay}" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" IsReadOnlyCaretVisible="True"  />
+        <Button Grid.Row="2" Content="OK" Padding="40,3" HorizontalAlignment="Right" Margin="8,4,20,8" IsDefault="True" IsCancel="True" />
     </Grid>
 </Window>
